Editacia galerie, nastavenia uctu

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="client/js/products.js"></script>
         <script type="text/javascript" src="client/js/gallery.js"></script>
         <script type="text/javascript" src="client/js/login.js"></script>
+        <script type="text/javascript" src="client/js/settings.js"></script>
         <!-- OTHER HEAD -->
         <title ng-controller="titleCTRL">{{ title }} - {{ route }}</title>
     </head>
