--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
         <script type="text/javascript" src="client/js/gallery.js"></script>
         <script type="text/javascript" src="client/js/login.js"></script>
         <script type="text/javascript" src="client/js/settings.js"></script>
+        <script type="text/javascript" src="client/js/bottom.js"></script>
+        <script type="text/javascript" src="client/js/orders.js"></script>
         <!-- OTHER HEAD -->
         <title ng-controller="titleCTRL">{{ title }} - {{ route }}</title>
     </head>
     <body>
         <div id="top" ng-controller="topCTRL"></div>
         <div id="mid" ng-view></div>
-        <div id="bot"></div>
+        <div id="bottom" ng-controller="bottomCTRL"></div>
 
-        <div class="hide show-8k">8k</div>
+        <!--<div class="hide show-8k">8k</div>
         <div class="hide show-4k">4k</div>
         <div class="hide show-2k">2k</div>
         <div class="hide show-xl">XL</div>
@@ -41,7 +43,7 @@
         <div class="hide show-xm">XM</div>
         <div class="hide show-md">MD</div>
         <div class="hide show-sm">SM</div>   
-        <div class="hide show-xs">XS</div>
+        <div class="hide show-xs">XS</div>-->
 
         <div id="toast-top" class="toast-top" ng-controller="toastCTRL">
             <b>Meno je prilis kratke!</b>
