--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -2,18 +2,17 @@
     <div class="column">
         <div class="row">
             <div class="col-12 tcenter page-head mg-20">
-                <span ng-if="login">Prihlásenie</span>
-                <span ng-if="!login">Registrácia</span>
+                <span>Prihlásenie</span>
             </div>
         </div>
         <div class="column tcenter">
             <b class="tprim">Mailova adresa</b>
             <br>
-            <input type="text" class="w-66 w-md-33 tcenter" ng-model="acc.mail">
+            <input type="text" class="w-66 w-md-33 tcenter" ng-model="acc.mail" placeholder="Mailova adresa">
             <br><br>
             <b class="tprim">Prihlasovacie heslo</b>
             <br>
-            <input type="password" class="w-66 w-md-33 tcenter" ng-model="acc.pass">
+            <input type="password" class="w-66 w-md-33 tcenter" ng-model="acc.pass" placeholder="Heslo">
             <br><br>
             <button class="btn" ng-click="tryLogin()">Prihlasit</button>
             <br><br>
