--- a/client/pages/home.html
+++ b/client/pages/home.html
@@ -25,7 +25,7 @@
                     <textarea class="col-md-7 col-lg-9 pd-15 tjust text" placeholder="Popis min. 25 znakov" ng-model="editing.text" rows="4"></textarea>
                 </div>
                 <div class="row">
-                    <input type="file" name="img0" id="img0"> 
+                    <input type="file" name="img0" id="img0" accept="image/x-png,image/gif,image/jpeg"> 
                     <h4>POZOR! Zmena obrazku sa prejavi az po ulozeni!</h4>
                 </div>
                 <div class="row">
